Bug 165809 - Okular seeks to wrong page in PDF link
Summary: Okular seeks to wrong page in PDF link
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-05 19:56 UTC by Raphael Kubo da Costa
Modified: 2008-08-10 22:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raphael Kubo da Costa 2008-07-05 19:56:19 UTC
Version:           svn r825763 (using Devel)
Installed from:    Compiled sources
OS:                Linux

The first page of the PDF I am reading has a table of contents with links to the appropriate pages in the document.

The first time I click the link, Okular seeks to the wrong page (it seems to be random, but before the right page number), even though the Thumbnails sidebar shows the correct page. If I scroll the document, the thumbnail goes to the page being currently displayed (the wrong one). However, if I click a link in the table of content and the Thumbnails sidebar is disabled, Okular seeks to a wrong page but when I click the Thumbnails icon to enable the sidebar, Okular seeks to the correct page.

After the first time I follow a link, Okular seeks to the correct page when I click it again (even though the bug happens again if I click another link in the table of contents).

The PDF I'm using in this report is http://ocw.mit.edu/ans7870/resources/Strang/Edited/Calculus/13.pdf (the bug happens at least with the other PDFs of the book).
Comment 1 Pino Toscano 2008-07-05 20:02:56 UTC
Which TOC are you referring to? Because the document you linked has no proper TOC; maybe you mean the first page that acts as index?
Comment 2 Raphael Kubo da Costa 2008-07-05 20:05:49 UTC
Exactly :)
Comment 3 Pino Toscano 2008-07-05 20:12:10 UTC
Well, it works here, clicking on any of the links in the chapter 13 of the TOC brings me to the correct location.
Are the tooltips of the links referring to the correct pages?
Which view modes are you using? Continuous or not? How many columns?
Also, which poppler version?
Comment 4 Raphael Kubo da Costa 2008-07-05 20:20:53 UTC
Now that you've mentioned, the bug only seems to happen in Continuous mode. I'm using Single Page. My poppler version is 0.8.3.

The tooltips refer to the correct pages, and when I follow the links for the first time, the current page display in the status bar also shows the correct page number, even though the current page being displayed is wrong.
Comment 5 giuseppe 2008-07-11 08:26:05 UTC
I have similar problem

http://www.gabrielesedioli.it/libroplanino.pdf

i try to scroll,and the first page is "static"
under it the other pages scroll,but wrong.
:(
Comment 6 Martin Schnieders 2008-07-21 10:49:56 UTC
I have a similar problem, the first time I click on a link, Okular "jumps" to short. The second time and any further, the behaviour is correctly.
Comment 7 Dario Andres 2008-08-02 21:17:56 UTC
Version 0.7 Using KDE 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)) (KDEmod) in ArchLinux i686:
(+poppler 0.8.4)
I can reproduce the original bug.
I can't reproduce the bug described in comment 5
Comment 8 Rafael Rodriguez 2008-08-10 15:04:27 UTC
I can reproduce this bug with the file:

http://www.cs.berkeley.edu/~kamil/papers/IJHPCA.pdf

It's only reproduceable if okular opens the file by the first page. The behaviour shown here is like #6. If it opens it in a more advanced location, it works O.K.

If I reproduce the bug (so oKular makes a short jump) and then close the file, when reopening it oKular goes to the right page.

Using KDE 4.1 and Qt 4.1.1 here, but already having problems before upgrading from Qt 4.1.0.
Comment 9 Rafael Rodriguez 2008-08-10 16:41:17 UTC
I wanted to mean Qt 4.4.1 and Qt 4.4.0 in #8 of course ;)
Comment 10 Albert Astals Cid 2008-08-10 22:52:02 UTC
SVN commit 844887 by aacid:

Backport  r844880 okular/trunk/KDE/kdegraphics/okular/ui/pageview.cpp:
If we are cancelling move, make sure we are where we should be

BUG: 165809


 M  +1 -0      pageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=844887