Backport  r844880 okular/trunk/KDE/kdegraphics/okular/ui/pageview.cpp: If we are cancelling move, make sure we are where we should be

BUG: 165809

svn path=/branches/KDE/4.1/kdegraphics/okular/; revision=844887